feat: Refactor robot configuration management and enhance data loading for GraphQL API

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ GRAPH_ID=1
 HOST=127.0.0.1
 PORT=8000
 RELOAD=true
+
+# Robot Configuration (JSON format)
+# Format: {"RobotName": {"host": "IP", "port": PORT, "cell_heights": [height1, height2, height3]}}
+ROBOTS_CONFIG={"Lertvilai": {"host": "192.168.123.171", "port": 8002, "cell_heights": [0.5, 1.0, 1.5]}}
